[gd_scene load_steps=20 format=4 uid="uid://crcpj5iugw4nl"]

[ext_resource type="Script" uid="uid://di08ur5fo4pmd" path="res://scripts/game_manager.gd" id="1_6brvo"]
[ext_resource type="PackedScene" uid="uid://d1e7v4t7yyn5d" path="res://scenes/objects/player.tscn" id="2_t6ck0"]
[ext_resource type="Texture2D" uid="uid://dmi5ww04ew3m0" path="res://assets/petalpaint_tileV2.png" id="4_xluun"]
[ext_resource type="PackedScene" uid="uid://bxr2majmj628v" path="res://scenes/objects/flowerBlu.tscn" id="5_qmmpm"]
[ext_resource type="PackedScene" uid="uid://bh2tfqsxu5j3s" path="res://scenes/objects/paintTable.tscn" id="5_reohu"]
[ext_resource type="PackedScene" uid="uid://bpoklwafp58tl" path="res://scenes/objects/rockBlk.tscn" id="6_bf11r"]
[ext_resource type="PackedScene" uid="uid://cmo7qf18u11ik" path="res://scenes/objects/flowerRed.tscn" id="6_bpc15"]
[ext_resource type="PackedScene" uid="uid://ufpq8lwrjcil" path="res://scenes/objects/rockWht.tscn" id="7_cfc3n"]
[ext_resource type="PackedScene" uid="uid://crkale7rv5fmg" path="res://scenes/objects/flowerYel.tscn" id="7_u1d8c"]
[ext_resource type="PackedScene" uid="uid://yv3l4wiaebm5" path="res://scenes/objects/paintEasle.tscn" id="9_ispa3"]
[ext_resource type="PackedScene" uid="uid://cgi6mn47lokd8" path="res://scenes/GUI/inventoryGUI.tscn" id="11_kb0px"]
[ext_resource type="PackedScene" uid="uid://7ewjevufsn6" path="res://scenes/GUI/paintTableGUI.tscn" id="11_yywtb"]
[ext_resource type="PackedScene" uid="uid://euyl1tmhr3as" path="res://scenes/GUI/options.tscn" id="12_8iqb8"]
[ext_resource type="Texture2D" uid="uid://d4csqvcx1cx7g" path="res://assets/exploreAssets/light.png" id="12_sp8kp"]
[ext_resource type="Shader" uid="uid://cf37ifjhr6dgj" path="res://grayscale.gdshader" id="13_3tpa7"]
[ext_resource type="PackedScene" uid="uid://ds607w661rnd7" path="res://scenes/GUI/paintingGUI.tscn" id="14_87ita"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aule8"]
texture = ExtResource("4_xluun")
texture_region_size = Vector2i(64, 64)
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
7:4/0 = 0
6:4/0 = 0
5:4/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
7:6/0 = 0
6:6/0 = 0
5:6/0 = 0
7:7/0 = 0
4:6/size_in_atlas = Vector2i(1, 2)
4:6/0 = 0
5:7/0 = 0
6:7/0 = 0
3:6/0 = 0
3:7/0 = 0
4:1/size_in_atlas = Vector2i(1, 2)
4:1/0 = 0
6:2/size_in_atlas = Vector2i(2, 1)
6:2/0 = 0

[sub_resource type="TileSet" id="TileSet_80hj2"]
tile_size = Vector2i(64, 64)
sources/1 = SubResource("TileSetAtlasSource_aule8")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_3tpa7"]
shader = ExtResource("13_3tpa7")

[node name="Exploration" type="Node2D"]
y_sort_enabled = true

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_6brvo")

[node name="TileMapLayers" type="Node2D" parent="."]
position = Vector2(-1, -1)
scale = Vector2(1.25, 1.25)

[node name="Ground" type="TileMapLayer" parent="TileMapLayers"]
z_index = -2
y_sort_enabled = true
use_parent_material = true
tile_map_data = PackedByteArray("AAD8/wMAAQAFAAYAAAD8/wIAAQAHAAYAAAD8/wEAAQAHAAYAAAD8/wAAAQAGAAYAAAD9/wIAAQAGAAQAAAD9/wEAAQAFAAYAAAD+/wIAAQAGAAQAAAD+/wEAAQAGAAQAAAD+/wAAAQAHAAYAAAD9/wAAAQAHAAYAAAAAAP3/AQAGAAQAAAABAP3/AQAGAAQAAAACAP3/AQAHAAYAAAACAP7/AQAGAAQAAAACAP//AQAGAAQAAAACAAAAAQAGAAQAAAACAAEAAQAGAAQAAAACAAIAAQAHAAYAAAABAAIAAQAGAAQAAAABAAEAAQAGAAQAAAABAP7/AQAGAAQAAAABAP//AQAGAAYAAAABAAAAAQAGAAQAAAD8//z/AQAHAAYAAAD9//z/AQAFAAYAAAD+//z/AQAGAAYAAAD///z/AQAGAAQAAAAAAPz/AQAHAAYAAAABAPz/AQAHAAYAAAACAPz/AQAFAAYAAAADAPz/AQAHAAYAAAADAP3/AQAGAAQAAAADAP7/AQAHAAYAAAADAP//AQAGAAQAAAADAAAAAQAFAAYAAAADAAEAAQAGAAYAAAADAAIAAQAGAAQAAAADAAMAAQAGAAQAAAD+/wMAAQAGAAYAAAD9/wMAAQAHAAYAAAAAAP//AQAHAAcAAAD/////AQAHAAcAAAD+////AQAHAAYAAAD9//7/AQAHAAYAAAD9//3/AQAGAAQAAAD8//7/AQAGAAQAAAD8////AQAGAAQAAAD8//3/AQAHAAYAAAD+//3/AQAGAAQAAAD///3/AQAGAAQAAAD///7/AQAHAAYAAAAAAP7/AQAFAAYAAAD+//7/AQAGAAYAAAD//wAAAQAHAAcAAAAAAAAAAQAHAAcAAAD//wEAAQAGAAQAAAAAAAEAAQAHAAYAAAACAAMAAQAFAAYAAAAAAAIAAQAHAAYAAAD//wIAAQAGAAQAAAD//wMAAQAHAAYAAAAAAAMAAQAFAAYAAAABAAMAAQAHAAYAAAD9////AQAHAAYAAAAEAP3/AQAFAAYAAAAEAPz/AQAGAAYAAAAEAP7/AQAHAAYAAAAEAP//AQAHAAYAAAAEAAAAAQAHAAYAAAAEAAEAAQAHAAYAAAAEAAIAAQAHAAYAAAAEAAMAAQAHAAYAAAAEAAQAAQAHAAYAAAADAAQAAQAGAAYAAAACAAQAAQAHAAYAAAABAAQAAQAHAAYAAAAAAAQAAQAHAAYAAAD//wQAAQAHAAYAAAD+/wQAAQAHAAYAAAD9/wQAAQAHAAYAAAD8/wQAAQAHAAYAAAD7/wQAAQAHAAYAAAD7/wMAAQAHAAYAAAD7/wIAAQAHAAYAAAD7/wEAAQAHAAYAAAD7/wAAAQAHAAYAAAD7////AQAHAAYAAAD7//7/AQAHAAYAAAD7//3/AQAHAAYAAAD7//z/AQAHAAYAAAD7//v/AQAHAAYAAAD8//v/AQAHAAYAAAD9//v/AQAHAAYAAAD+//v/AQAHAAYAAAD///v/AQAHAAYAAAAAAPv/AQAHAAYAAAABAPv/AQAHAAYAAAACAPv/AQAHAAYAAAADAPv/AQAHAAYAAAAEAPv/AQAHAAYAAAAFAPn/AQAHAAYAAAAEAPn/AQAHAAYAAAADAPn/AQAHAAYAAAAFAPr/AQAHAAYAAAAEAPr/AQAHAAYAAAADAPr/AQAHAAYAAAACAPr/AQAGAAYAAAABAPr/AQAHAAYAAAAAAPr/AQAHAAYAAAD///r/AQAHAAYAAAD+//r/AQAGAAYAAAD9//r/AQAHAAYAAAD8//r/AQAHAAYAAAD7//r/AQAGAAYAAAD6//r/AQAHAAYAAAD5//r/AQAHAAYAAAD7/wUAAQAHAAYAAAD7/wYAAQAHAAYAAAAFAAQAAQAHAAYAAAAGAAQAAQAHAAYAAAAGAAMAAQAHAAYAAAAGAAIAAQAHAAYAAAAGAAEAAQAHAAYAAAAGAAAAAQAHAAYAAAAGAP//AQAHAAYAAAAGAP7/AQAFAAYAAAAGAP3/AQAHAAYAAAAGAPz/AQAHAAYAAAAGAPv/AQAFAAYAAAAGAPr/AQAHAAYAAAAGAPn/AQAHAAYAAAAFAPv/AQAHAAYAAAAFAPz/AQAHAAYAAAAFAP3/AQAHAAYAAAAFAP7/AQAHAAYAAAAFAP//AQAHAAYAAAAFAAAAAQAHAAYAAAAFAAEAAQAHAAYAAAAFAAIAAQAHAAYAAAAFAAMAAQAGAAYAAAACAPn/AQAHAAYAAAABAPn/AQAHAAYAAAAAAPn/AQAHAAYAAAD///n/AQAHAAYAAAD+//n/AQAHAAYAAAD9//n/AQAHAAYAAAD8//n/AQAHAAYAAAD7//n/AQAHAAYAAAD6//n/AQAHAAYAAAD5//n/AQAHAAYAAAD5//v/AQAHAAYAAAD5//z/AQAHAAYAAAD5//3/AQAHAAYAAAD5//7/AQAHAAYAAAD5////AQAHAAYAAAD5/wAAAQAHAAYAAAD5/wEAAQAHAAYAAAD5/wIAAQAHAAYAAAD5/wMAAQAHAAYAAAD5/wQAAQAHAAYAAAD5/wUAAQAFAAYAAAD5/wYAAQAHAAYAAAD6/wYAAQAHAAYAAAD8/wYAAQAHAAYAAAD9/wYAAQAHAAYAAAD+/wYAAQAHAAYAAAD//wYAAQAHAAYAAAAAAAYAAQAHAAYAAAABAAYAAQAHAAYAAAACAAYAAQAHAAYAAAADAAYAAQAHAAYAAAAEAAYAAQAHAAYAAAAFAAYAAQAHAAYAAAAGAAYAAQAHAAYAAAAGAAUAAQAHAAYAAAAFAAUAAQAHAAYAAAAEAAUAAQAHAAYAAAADAAUAAQAHAAYAAAACAAUAAQAHAAYAAAABAAUAAQAHAAYAAAAAAAUAAQAHAAYAAAD//wUAAQAHAAYAAAD+/wUAAQAHAAYAAAD9/wUAAQAFAAYAAAD8/wUAAQAHAAYAAAD6/wUAAQAHAAYAAAD6/wQAAQAHAAYAAAD6/wMAAQAHAAYAAAD6/wIAAQAFAAYAAAD6/wEAAQAHAAYAAAD6/wAAAQAHAAYAAAD6////AQAFAAYAAAD6//7/AQAHAAYAAAD6//3/AQAHAAYAAAD6//z/AQAHAAYAAAD6//v/AQAHAAYAAAAHAAYAAQAHAAYAAAAIAAYAAQAGAAYAAAAIAAUAAQAFAAYAAAAHAAUAAQAHAAYAAAAHAAQAAQAGAAYAAAAHAAMAAQAFAAYAAAAIAAMAAQAHAAYAAAAIAAQAAQAHAAYAAAAIAAIAAQAHAAYAAAAHAAIAAQAHAAYAAAAHAAEAAQAHAAYAAAAHAAAAAQAHAAYAAAAIAAEAAQAHAAYAAAAHAP//AQAHAAYAAAAIAAAAAQAHAAYAAAAIAP//AQAHAAYAAAAIAP7/AQAHAAYAAAAHAP7/AQAHAAYAAAAHAP3/AQAHAAYAAAAHAPz/AQAHAAYAAAAHAPv/AQAHAAYAAAAHAPr/AQAHAAYAAAAHAPn/AQAHAAYAAAAIAPn/AQAHAAYAAAAIAPr/AQAHAAYAAAAIAPv/AQAHAAYAAAAIAPz/AQAHAAYAAAAIAP3/AQAHAAYAAAAIAPj/AQAHAAYAAAAIAPf/AQAHAAYAAAAHAPf/AQAHAAYAAAAGAPf/AQAHAAYAAAAFAPf/AQAHAAYAAAAEAPf/AQAHAAYAAAADAPf/AQAHAAYAAAACAPf/AQAHAAYAAAABAPf/AQAHAAYAAAAAAPf/AQAHAAYAAAD///f/AQAHAAYAAAD+//f/AQAHAAYAAAD9//f/AQAHAAYAAAD8//f/AQAHAAYAAAD7//f/AQAHAAYAAAD6//f/AQAHAAYAAAD5//f/AQAHAAYAAAD5//j/AQAHAAYAAAD6//j/AQAHAAYAAAD7//j/AQAHAAYAAAD8//j/AQAHAAYAAAD9//j/AQAHAAYAAAD+//j/AQAHAAYAAAD///j/AQAHAAYAAAAAAPj/AQAHAAYAAAABAPj/AQAHAAYAAAACAPj/AQAHAAYAAAADAPj/AQAHAAYAAAAEAPj/AQAHAAYAAAAFAPj/AQAHAAYAAAAGAPj/AQAHAAYAAAAHAPj/AQAHAAYAAAD4//f/AQAHAAYAAAD3//f/AQAHAAYAAAD3//j/AQAHAAYAAAD3//n/AQAHAAYAAAD3//r/AQAHAAYAAAD3//v/AQAHAAYAAAD3//z/AQAHAAYAAAD3//3/AQAHAAYAAAD3//7/AQAHAAYAAAD3////AQAHAAYAAAD3/wAAAQAHAAYAAAD3/wEAAQAHAAYAAAD3/wIAAQAHAAYAAAD3/wMAAQAHAAYAAAD3/wQAAQAHAAYAAAD3/wUAAQAHAAYAAAD3/wYAAQAHAAYAAAD4/wYAAQAHAAYAAAD4/wUAAQAHAAYAAAD4/wQAAQAHAAYAAAD4/wMAAQAHAAYAAAD4/wIAAQAHAAYAAAD4/wEAAQAHAAYAAAD4/wAAAQAHAAYAAAD4////AQAHAAYAAAD4//7/AQAHAAYAAAD4//3/AQAHAAYAAAD4//z/AQAHAAYAAAD4//v/AQAHAAYAAAD4//r/AQAHAAYAAAD4//n/AQAHAAYAAAD4//j/AQAHAAYAAAD3/wcAAQAHAAYAAAD3/wgAAQAHAAYAAAD4/wgAAQAHAAYAAAD5/wgAAQAHAAYAAAD6/wgAAQAHAAYAAAD7/wgAAQAHAAYAAAD8/wgAAQAHAAYAAAD9/wgAAQAHAAYAAAD+/wgAAQAHAAYAAAD//wgAAQAHAAYAAAAAAAgAAQAHAAYAAAABAAgAAQAHAAYAAAACAAgAAQAHAAYAAAADAAgAAQAHAAYAAAAEAAgAAQAHAAYAAAAFAAgAAQAHAAYAAAAGAAgAAQAHAAYAAAAHAAgAAQAHAAYAAAAIAAgAAQAHAAYAAAAIAAcAAQAHAAYAAAAHAAcAAQAHAAYAAAAGAAcAAQAHAAYAAAAAAAcAAQAHAAYAAAABAAcAAQAHAAYAAAACAAcAAQAHAAYAAAADAAcAAQAHAAYAAAAEAAcAAQAHAAYAAAAFAAcAAQAHAAYAAAD//wcAAQAHAAYAAAD+/wcAAQAHAAYAAAD9/wcAAQAHAAYAAAD8/wcAAQAHAAYAAAD7/wcAAQAHAAYAAAD6/wcAAQAHAAYAAAD5/wcAAQAHAAYAAAD4/wcAAQAHAAYAAAAJAPf/AQAHAAYAAAAJAPj/AQAHAAYAAAAJAPn/AQAHAAYAAAAJAPr/AQAHAAYAAAAJAPv/AQAHAAYAAAAJAPz/AQAHAAYAAAAJAP3/AQAHAAYAAAAJAP7/AQAHAAYAAAAJAP//AQAHAAYAAAAJAAAAAQAHAAYAAAAJAAEAAQAHAAYAAAAJAAIAAQAHAAYAAAAJAAMAAQAHAAYAAAAJAAQAAQAHAAYAAAAJAAUAAQAHAAYAAAAJAAYAAQAHAAYAAAAJAAcAAQAHAAYAAAAJAAgAAQAHAAYAAAAKAPf/AQAHAAYAAAAKAPj/AQAHAAYAAAAKAPn/AQAHAAYAAAAKAPr/AQAHAAYAAAAKAPv/AQAHAAYAAAAKAPz/AQAHAAYAAAAKAP3/AQAHAAYAAAAKAP7/AQAHAAYAAAAKAP//AQAHAAYAAAAKAAAAAQAHAAYAAAAKAAEAAQAHAAYAAAAKAAIAAQAHAAYAAAAKAAMAAQAHAAYAAAAKAAQAAQAHAAYAAAAKAAUAAQAHAAYAAAAKAAYAAQAHAAYAAAAKAAcAAQAHAAYAAAAKAAgAAQAHAAYAAAALAPf/AQAHAAYAAAALAPj/AQAHAAYAAAALAPn/AQAHAAYAAAALAPr/AQAHAAYAAAALAPv/AQAHAAYAAAALAPz/AQAHAAYAAAALAP3/AQAHAAYAAAALAP7/AQAHAAYAAAALAP//AQAHAAYAAAALAAAAAQAHAAYAAAALAAEAAQAHAAYAAAALAAIAAQAHAAYAAAALAAMAAQAHAAYAAAALAAQAAQAHAAYAAAALAAUAAQAHAAYAAAALAAYAAQAHAAYAAAALAAcAAQAHAAYAAAALAAgAAQAHAAYAAAAMAPf/AQAHAAYAAAAMAPj/AQAHAAYAAAAMAPn/AQAHAAYAAAAMAPr/AQAHAAYAAAAMAPv/AQAHAAYAAAAMAPz/AQAHAAYAAAAMAP3/AQAHAAYAAAAMAP7/AQAHAAYAAAAMAP//AQAHAAYAAAAMAAAAAQAHAAYAAAAMAAEAAQAHAAYAAAAMAAIAAQAHAAYAAAAMAAMAAQAHAAYAAAAMAAQAAQAHAAYAAAAMAAUAAQAHAAYAAAAMAAYAAQAHAAYAAAAMAAcAAQAHAAYAAAAMAAgAAQAHAAYAAAANAPf/AQAHAAYAAAANAPj/AQAHAAYAAAANAPn/AQAHAAYAAAANAPr/AQAHAAYAAAANAPv/AQAHAAYAAAANAPz/AQAHAAYAAAANAP3/AQAHAAYAAAANAP7/AQAHAAYAAAANAP//AQAHAAYAAAANAAAAAQAHAAYAAAANAAEAAQAHAAYAAAANAAIAAQAHAAYAAAANAAMAAQAHAAYAAAANAAQAAQAHAAYAAAANAAUAAQAHAAYAAAANAAYAAQAHAAYAAAANAAcAAQAHAAYAAAANAAgAAQAHAAYAAAAOAPf/AQAHAAYAAAAOAPj/AQAHAAYAAAAOAPn/AQAHAAYAAAAOAPr/AQAHAAYAAAAOAPv/AQAHAAYAAAAOAPz/AQAHAAYAAAAOAP3/AQAHAAYAAAAOAP7/AQAHAAYAAAAOAP//AQAHAAYAAAAOAAAAAQAHAAYAAAAOAAEAAQAHAAYAAAAOAAIAAQAHAAYAAAAOAAMAAQAHAAYAAAAOAAQAAQAHAAYAAAAOAAUAAQAHAAYAAAAOAAYAAQAHAAYAAAAOAAcAAQAHAAYAAAAOAAgAAQAHAAYAAAAPAPf/AQAHAAYAAAAPAPj/AQAHAAYAAAAPAPn/AQAHAAYAAAAPAPr/AQAHAAYAAAAPAPv/AQAHAAYAAAAPAPz/AQAHAAYAAAAPAP3/AQAHAAYAAAAPAP7/AQAHAAYAAAAPAP//AQAHAAYAAAAPAAAAAQAHAAYAAAAPAAEAAQAHAAYAAAAPAAIAAQAHAAYAAAAPAAMAAQAHAAYAAAAPAAQAAQAHAAYAAAAPAAUAAQAHAAYAAAAPAAYAAQAHAAYAAAAPAAcAAQAHAAYAAAAPAAgAAQAHAAYAAAAQAPf/AQAHAAYAAAAQAPj/AQAHAAYAAAAQAPn/AQAHAAYAAAAQAPr/AQAHAAYAAAAQAPv/AQAHAAYAAAAQAPz/AQAHAAYAAAAQAP3/AQAHAAYAAAAQAP7/AQAHAAYAAAAQAP//AQAHAAYAAAAQAAAAAQAHAAYAAAAQAAEAAQAHAAYAAAAQAAIAAQAHAAYAAAAQAAMAAQAHAAYAAAAQAAQAAQAHAAYAAAAQAAUAAQAHAAYAAAAQAAYAAQAHAAYAAAAQAAcAAQAHAAYAAAAQAAgAAQAHAAYAAAARAPf/AQAHAAYAAAARAPj/AQAHAAYAAAARAPn/AQAHAAYAAAARAPr/AQAHAAYAAAARAPv/AQAHAAYAAAARAPz/AQAHAAYAAAARAP3/AQAHAAYAAAARAP7/AQAHAAYAAAARAP//AQAHAAYAAAARAAAAAQAHAAYAAAARAAEAAQAHAAYAAAARAAIAAQAHAAYAAAARAAMAAQAHAAYAAAARAAQAAQAHAAYAAAARAAUAAQAHAAYAAAARAAYAAQAHAAYAAAARAAcAAQAHAAYAAAARAAgAAQAHAAYAAAD3//D/AQAHAAYAAAD3//H/AQAHAAYAAAD3//L/AQAHAAYAAAD3//P/AQAHAAYAAAD3//T/AQAHAAYAAAD3//X/AQAHAAYAAAD3//b/AQAHAAYAAAD4//D/AQAHAAYAAAD4//H/AQAHAAYAAAD4//L/AQAHAAYAAAD4//P/AQAHAAYAAAD4//T/AQAHAAYAAAD4//X/AQAHAAYAAAD4//b/AQAHAAYAAAD5//D/AQAHAAYAAAD5//H/AQAHAAYAAAD5//L/AQAHAAYAAAD5//P/AQAHAAYAAAD5//T/AQAHAAYAAAD5//X/AQAHAAYAAAD5//b/AQAHAAYAAAD6//D/AQAHAAYAAAD6//H/AQAHAAYAAAD6//L/AQAHAAYAAAD6//P/AQAHAAYAAAD6//T/AQAHAAYAAAD6//X/AQAHAAYAAAD6//b/AQAHAAYAAAD7//D/AQAHAAYAAAD7//H/AQAHAAYAAAD7//L/AQAHAAYAAAD7//P/AQAHAAYAAAD7//T/AQAHAAYAAAD7//X/AQAHAAYAAAD7//b/AQAHAAYAAAD8//D/AQAHAAYAAAD8//H/AQAHAAYAAAD8//L/AQAHAAYAAAD8//P/AQAHAAYAAAD8//T/AQAHAAYAAAD8//X/AQAHAAYAAAD8//b/AQAHAAYAAAD9//D/AQAHAAYAAAD9//H/AQAHAAYAAAD9//L/AQAHAAYAAAD9//P/AQAHAAYAAAD9//T/AQAHAAYAAAD9//X/AQAHAAYAAAD9//b/AQAHAAYAAAD+//D/AQAHAAYAAAD+//H/AQAHAAYAAAD+//L/AQAHAAYAAAD+//P/AQAHAAYAAAD+//T/AQAHAAYAAAD+//X/AQAHAAYAAAD+//b/AQAHAAYAAAD///D/AQAHAAYAAAD///H/AQAHAAYAAAD///L/AQAHAAYAAAD///P/AQAHAAYAAAD///T/AQAHAAYAAAD///X/AQAHAAYAAAD///b/AQAHAAYAAAAAAPD/AQAHAAYAAAAAAPH/AQAHAAYAAAAAAPL/AQAHAAYAAAAAAPP/AQAHAAYAAAAAAPT/AQAHAAYAAAAAAPX/AQAHAAYAAAAAAPb/AQAHAAYAAAABAPD/AQAHAAYAAAABAPH/AQAHAAYAAAABAPL/AQAHAAYAAAABAPP/AQAHAAYAAAABAPT/AQAHAAYAAAABAPX/AQAHAAYAAAABAPb/AQAHAAYAAAACAPD/AQAHAAYAAAACAPH/AQAHAAYAAAACAPL/AQAHAAYAAAACAPP/AQAHAAYAAAACAPT/AQAHAAYAAAACAPX/AQAHAAYAAAACAPb/AQAHAAYAAAADAPD/AQAHAAYAAAADAPH/AQAHAAYAAAADAPL/AQAHAAYAAAADAPP/AQAHAAYAAAADAPT/AQAHAAYAAAADAPX/AQAHAAYAAAADAPb/AQAHAAYAAAAEAPD/AQAHAAYAAAAEAPH/AQAHAAYAAAAEAPL/AQAHAAYAAAAEAPP/AQAHAAYAAAAEAPT/AQAHAAYAAAAEAPX/AQAHAAYAAAAEAPb/AQAHAAYAAAAFAPD/AQAHAAYAAAAFAPH/AQAHAAYAAAAFAPL/AQAHAAYAAAAFAPP/AQAHAAYAAAAFAPT/AQAHAAYAAAAFAPX/AQAHAAYAAAAFAPb/AQAHAAYAAAAGAPD/AQAHAAYAAAAGAPH/AQAHAAYAAAAGAPL/AQAHAAYAAAAGAPP/AQAHAAYAAAAGAPT/AQAHAAYAAAAGAPX/AQAHAAYAAAAGAPb/AQAHAAYAAAAHAPD/AQAHAAYAAAAHAPH/AQAHAAYAAAAHAPL/AQAHAAYAAAAHAPP/AQAHAAYAAAAHAPT/AQAHAAYAAAAHAPX/AQAHAAYAAAAHAPb/AQAHAAYAAAAIAPD/AQAHAAYAAAAIAPH/AQAHAAYAAAAIAPL/AQAHAAYAAAAIAPP/AQAHAAYAAAAIAPT/AQAHAAYAAAAIAPX/AQAHAAYAAAAIAPb/AQAHAAYAAAAJAPD/AQAHAAYAAAAJAPH/AQAHAAYAAAAJAPL/AQAHAAYAAAAJAPP/AQAHAAYAAAAJAPT/AQAHAAYAAAAJAPX/AQAHAAYAAAAJAPb/AQAHAAYAAAAKAPD/AQAHAAYAAAAKAPH/AQAHAAYAAAAKAPL/AQAHAAYAAAAKAPP/AQAHAAYAAAAKAPT/AQAHAAYAAAAKAPX/AQAHAAYAAAAKAPb/AQAHAAYAAAALAPD/AQAHAAYAAAALAPH/AQAHAAYAAAALAPL/AQAHAAYAAAALAPP/AQAHAAYAAAALAPT/AQAHAAYAAAALAPX/AQAHAAYAAAALAPb/AQAHAAYAAAAMAPD/AQAHAAYAAAAMAPH/AQAHAAYAAAAMAPL/AQAHAAYAAAAMAPP/AQAHAAYAAAAMAPT/AQAHAAYAAAAMAPX/AQAHAAYAAAAMAPb/AQAHAAYAAAANAPD/AQAHAAYAAAANAPH/AQAHAAYAAAANAPL/AQAHAAYAAAANAPP/AQAHAAYAAAANAPT/AQAHAAYAAAANAPX/AQAHAAYAAAANAPb/AQAHAAYAAAAOAPD/AQAHAAYAAAAOAPH/AQAHAAYAAAAOAPL/AQAHAAYAAAAOAPP/AQAHAAYAAAAOAPT/AQAHAAYAAAAOAPX/AQAHAAYAAAAOAPb/AQAHAAYAAAAPAPD/AQAHAAYAAAAPAPH/AQAHAAYAAAAPAPL/AQAHAAYAAAAPAPP/AQAHAAYAAAAPAPT/AQAHAAYAAAAPAPX/AQAHAAYAAAAPAPb/AQAHAAYAAAAQAPD/AQAHAAYAAAAQAPH/AQAHAAYAAAAQAPL/AQAHAAYAAAAQAPP/AQAHAAYAAAAQAPT/AQAHAAYAAAAQAPX/AQAHAAYAAAAQAPb/AQAHAAYAAAARAPD/AQAHAAYAAAARAPH/AQAHAAYAAAARAPL/AQAHAAYAAAARAPP/AQAHAAYAAAARAPT/AQAHAAYAAAARAPX/AQAHAAYAAAARAPb/AQAHAAYAAADu//D/AQAHAAYAAADu//H/AQAHAAYAAADu//L/AQAHAAYAAADu//P/AQAHAAYAAADu//T/AQAHAAYAAADu//X/AQAHAAYAAADu//b/AQAHAAYAAADu//f/AQAHAAYAAADu//j/AQAHAAYAAADu//n/AQAHAAYAAADu//r/AQAHAAYAAADu//v/AQAHAAYAAADu//z/AQAHAAYAAADu//3/AQAHAAYAAADu//7/AQAHAAYAAADu////AQAHAAYAAADu/wAAAQAHAAYAAADu/wEAAQAHAAYAAADu/wIAAQAHAAYAAADu/wMAAQAHAAYAAADu/wQAAQAHAAYAAADu/wUAAQAHAAYAAADu/wYAAQAHAAYAAADu/wcAAQAHAAYAAADu/wgAAQAHAAYAAADv//D/AQAHAAYAAADv//H/AQAHAAYAAADv//L/AQAHAAYAAADv//P/AQAHAAYAAADv//T/AQAHAAYAAADv//X/AQAHAAYAAADv//b/AQAHAAYAAADv//f/AQAHAAYAAADv//j/AQAHAAYAAADv//n/AQAHAAYAAADv//r/AQAHAAYAAADv//v/AQAHAAYAAADv//z/AQAHAAYAAADv//3/AQAHAAYAAADv//7/AQAHAAYAAADv////AQAHAAYAAADv/wAAAQAHAAYAAADv/wEAAQAHAAYAAADv/wIAAQAHAAYAAADv/wMAAQAHAAYAAADv/wQAAQAHAAYAAADv/wUAAQAHAAYAAADv/wYAAQAHAAYAAADv/wcAAQAHAAYAAADv/wgAAQAHAAYAAADw//D/AQAHAAYAAADw//H/AQAHAAYAAADw//L/AQAHAAYAAADw//P/AQAHAAYAAADw//T/AQAHAAYAAADw//X/AQAHAAYAAADw//b/AQAHAAYAAADw//f/AQAHAAYAAADw//j/AQAHAAYAAADw//n/AQAHAAYAAADw//r/AQAHAAYAAADw//v/AQAHAAYAAADw//z/AQAHAAYAAADw//3/AQAHAAYAAADw//7/AQAHAAYAAADw////AQAHAAYAAADw/wAAAQAHAAYAAADw/wEAAQAHAAYAAADw/wIAAQAHAAYAAADw/wMAAQAHAAYAAADw/wQAAQAHAAYAAADw/wUAAQAHAAYAAADw/wYAAQAHAAYAAADw/wcAAQAHAAYAAADw/wgAAQAHAAYAAADx//D/AQAHAAYAAADx//H/AQAHAAYAAADx//L/AQAHAAYAAADx//P/AQAHAAYAAADx//T/AQAHAAYAAADx//X/AQAHAAYAAADx//b/AQAHAAYAAADx//f/AQAHAAYAAADx//j/AQAHAAYAAADx//n/AQAHAAYAAADx//r/AQAHAAYAAADx//v/AQAHAAYAAADx//z/AQAHAAYAAADx//3/AQAHAAYAAADx//7/AQAHAAYAAADx////AQAHAAYAAADx/wAAAQAHAAYAAADx/wEAAQAHAAYAAADx/wIAAQAHAAYAAADx/wMAAQAHAAYAAADx/wQAAQAHAAYAAADx/wUAAQAHAAYAAADx/wYAAQAHAAYAAADx/wcAAQAHAAYAAADx/wgAAQAHAAYAAADy//D/AQAHAAYAAADy//H/AQAHAAYAAADy//L/AQAHAAYAAADy//P/AQAHAAYAAADy//T/AQAHAAYAAADy//X/AQAHAAYAAADy//b/AQAHAAYAAADy//f/AQAHAAYAAADy//j/AQAHAAYAAADy//n/AQAHAAYAAADy//r/AQAHAAYAAADy//v/AQAHAAYAAADy//z/AQAHAAYAAADy//3/AQAHAAYAAADy//7/AQAHAAYAAADy////AQAHAAYAAADy/wAAAQAHAAYAAADy/wEAAQAHAAYAAADy/wIAAQAHAAYAAADy/wMAAQAHAAYAAADy/wQAAQAHAAYAAADy/wUAAQAHAAYAAADy/wYAAQAHAAYAAADy/wcAAQAHAAYAAADy/wgAAQAHAAYAAADz//D/AQAHAAYAAADz//H/AQAHAAYAAADz//L/AQAHAAYAAADz//P/AQAHAAYAAADz//T/AQAHAAYAAADz//X/AQAHAAYAAADz//b/AQAHAAYAAADz//f/AQAHAAYAAADz//j/AQAHAAYAAADz//n/AQAHAAYAAADz//r/AQAHAAYAAADz//v/AQAHAAYAAADz//z/AQAHAAYAAADz//3/AQAHAAYAAADz//7/AQAHAAYAAADz////AQAHAAYAAADz/wAAAQAHAAYAAADz/wEAAQAHAAYAAADz/wIAAQAHAAYAAADz/wMAAQAHAAYAAADz/wQAAQAHAAYAAADz/wUAAQAHAAYAAADz/wYAAQAHAAYAAADz/wcAAQAHAAYAAADz/wgAAQAHAAYAAAD0//D/AQAHAAYAAAD0//H/AQAHAAYAAAD0//L/AQAHAAYAAAD0//P/AQAHAAYAAAD0//T/AQAHAAYAAAD0//X/AQAHAAYAAAD0//b/AQAHAAYAAAD0//f/AQAHAAYAAAD0//j/AQAHAAYAAAD0//n/AQAHAAYAAAD0//r/AQAHAAYAAAD0//v/AQAHAAYAAAD0//z/AQAHAAYAAAD0//3/AQAHAAYAAAD0//7/AQAHAAYAAAD0////AQAHAAYAAAD0/wAAAQAHAAYAAAD0/wEAAQAHAAYAAAD0/wIAAQAHAAYAAAD0/wMAAQAHAAYAAAD0/wQAAQAHAAYAAAD0/wUAAQAHAAYAAAD0/wYAAQAHAAYAAAD0/wcAAQAHAAYAAAD0/wgAAQAHAAYAAAD1//D/AQAHAAYAAAD1//H/AQAHAAYAAAD1//L/AQAHAAYAAAD1//P/AQAHAAYAAAD1//T/AQAHAAYAAAD1//X/AQAHAAYAAAD1//b/AQAHAAYAAAD1//f/AQAHAAYAAAD1//j/AQAHAAYAAAD1//n/AQAHAAYAAAD1//r/AQAHAAYAAAD1//v/AQAHAAYAAAD1//z/AQAHAAYAAAD1//3/AQAHAAYAAAD1//7/AQAHAAYAAAD1////AQAHAAYAAAD1/wAAAQAHAAYAAAD1/wEAAQAHAAYAAAD1/wIAAQAHAAYAAAD1/wMAAQAHAAYAAAD1/wQAAQAHAAYAAAD1/wUAAQAHAAYAAAD1/wYAAQAHAAYAAAD1/wcAAQAHAAYAAAD1/wgAAQAHAAYAAAD2//D/AQAHAAYAAAD2//H/AQAHAAYAAAD2//L/AQAHAAYAAAD2//P/AQAHAAYAAAD2//T/AQAHAAYAAAD2//X/AQAHAAYAAAD2//b/AQAHAAYAAAD2//f/AQAHAAYAAAD2//j/AQAHAAYAAAD2//n/AQAHAAYAAAD2//r/AQAHAAYAAAD2//v/AQAHAAYAAAD2//z/AQAHAAYAAAD2//3/AQAHAAYAAAD2//7/AQAHAAYAAAD2////AQAHAAYAAAD2/wAAAQAHAAYAAAD2/wEAAQAHAAYAAAD2/wIAAQAHAAYAAAD2/wMAAQAHAAYAAAD2/wQAAQAHAAYAAAD2/wUAAQAHAAYAAAD2/wYAAQAHAAYAAAD2/wcAAQAHAAYAAAD2/wgAAQAHAAYAAADu/wkAAQAHAAYAAADu/woAAQAHAAYAAADu/wsAAQAHAAYAAADu/wwAAQAHAAYAAADu/w0AAQAHAAYAAADu/w4AAQAHAAYAAADu/w8AAQAHAAYAAADu/xAAAQAHAAYAAADu/xEAAQAHAAYAAADv/wkAAQAHAAYAAADv/woAAQAHAAYAAADv/wsAAQAHAAYAAADv/wwAAQAHAAYAAADv/w0AAQAHAAYAAADv/w4AAQAHAAYAAADv/w8AAQAHAAYAAADv/xAAAQAHAAYAAADv/xEAAQAHAAYAAADw/wkAAQAHAAYAAADw/woAAQAHAAYAAADw/wsAAQAHAAYAAADw/wwAAQAHAAYAAADw/w0AAQAHAAYAAADw/w4AAQAHAAYAAADw/w8AAQAHAAYAAADw/xAAAQAHAAYAAADw/xEAAQAHAAYAAADx/wkAAQAHAAYAAADx/woAAQAHAAYAAADx/wsAAQAHAAYAAADx/wwAAQAHAAYAAADx/w0AAQAHAAYAAADx/w4AAQAHAAYAAADx/w8AAQAHAAYAAADx/xAAAQAHAAYAAADx/xEAAQAHAAYAAADy/wkAAQAHAAYAAADy/woAAQAHAAYAAADy/wsAAQAHAAYAAADy/wwAAQAHAAYAAADy/w0AAQAHAAYAAADy/w4AAQAHAAYAAADy/w8AAQAHAAYAAADy/xAAAQAHAAYAAADy/xEAAQAHAAYAAADz/wkAAQAHAAYAAADz/woAAQAHAAYAAADz/wsAAQAHAAYAAADz/wwAAQAHAAYAAADz/w0AAQAHAAYAAADz/w4AAQAHAAYAAADz/w8AAQAHAAYAAADz/xAAAQAHAAYAAADz/xEAAQAHAAYAAAD0/wkAAQAHAAYAAAD0/woAAQAHAAYAAAD0/wsAAQAHAAYAAAD0/wwAAQAHAAYAAAD0/w0AAQAHAAYAAAD0/w4AAQAHAAYAAAD0/w8AAQAHAAYAAAD0/xAAAQAHAAYAAAD0/xEAAQAHAAYAAAD1/wkAAQAHAAYAAAD1/woAAQAHAAYAAAD1/wsAAQAHAAYAAAD1/wwAAQAHAAYAAAD1/w0AAQAHAAYAAAD1/w4AAQAHAAYAAAD1/w8AAQAHAAYAAAD1/xAAAQAHAAYAAAD1/xEAAQAHAAYAAAD2/wkAAQAHAAYAAAD2/woAAQAHAAYAAAD2/wsAAQAHAAYAAAD2/wwAAQAHAAYAAAD2/w0AAQAHAAYAAAD2/w4AAQAHAAYAAAD2/w8AAQAHAAYAAAD2/xAAAQAHAAYAAAD2/xEAAQAHAAYAAAD3/wkAAQAHAAYAAAD3/woAAQAHAAYAAAD3/wsAAQAHAAYAAAD3/wwAAQAHAAYAAAD3/w0AAQAHAAYAAAD3/w4AAQAHAAYAAAD3/w8AAQAHAAYAAAD3/xAAAQAHAAYAAAD3/xEAAQAHAAYAAAD4/wkAAQAHAAYAAAD4/woAAQAHAAYAAAD4/wsAAQAHAAYAAAD4/wwAAQAHAAYAAAD4/w0AAQAHAAYAAAD4/w4AAQAHAAYAAAD4/w8AAQAHAAYAAAD4/xAAAQAHAAYAAAD4/xEAAQAHAAYAAAD5/wkAAQAHAAYAAAD5/woAAQAHAAYAAAD5/wsAAQAHAAYAAAD5/wwAAQAHAAYAAAD5/w0AAQAHAAYAAAD5/w4AAQAHAAYAAAD5/w8AAQAHAAYAAAD5/xAAAQAHAAYAAAD5/xEAAQAHAAYAAAD6/wkAAQAHAAYAAAD6/woAAQAHAAYAAAD6/wsAAQAHAAYAAAD6/wwAAQAHAAYAAAD6/w0AAQAHAAYAAAD6/w4AAQAHAAYAAAD6/w8AAQAHAAYAAAD6/xAAAQAHAAYAAAD6/xEAAQAHAAYAAAD7/wkAAQAHAAYAAAD7/woAAQAHAAYAAAD7/wsAAQAHAAYAAAD7/wwAAQAHAAYAAAD7/w0AAQAHAAYAAAD7/w4AAQAHAAYAAAD7/w8AAQAHAAYAAAD7/xAAAQAHAAYAAAD7/xEAAQAHAAYAAAD8/wkAAQAHAAYAAAD8/woAAQAHAAYAAAD8/wsAAQAHAAYAAAD8/wwAAQAHAAYAAAD8/w0AAQAHAAYAAAD8/w4AAQAHAAYAAAD8/w8AAQAHAAYAAAD8/xAAAQAHAAYAAAD8/xEAAQAHAAYAAAD9/wkAAQAHAAYAAAD9/woAAQAHAAYAAAD9/wsAAQAHAAYAAAD9/wwAAQAHAAYAAAD9/w0AAQAHAAYAAAD9/w4AAQAHAAYAAAD9/w8AAQAHAAYAAAD9/xAAAQAHAAYAAAD9/xEAAQAHAAYAAAD+/wkAAQAHAAYAAAD+/woAAQAHAAYAAAD+/wsAAQAHAAYAAAD+/wwAAQAHAAYAAAD+/w0AAQAHAAYAAAD+/w4AAQAHAAYAAAD+/w8AAQAHAAYAAAD+/xAAAQAHAAYAAAD+/xEAAQAHAAYAAAD//wkAAQAHAAYAAAD//woAAQAHAAYAAAD//wsAAQAHAAYAAAD//wwAAQAHAAYAAAD//w0AAQAHAAYAAAD//w4AAQAHAAYAAAD//w8AAQAHAAYAAAD//xAAAQAHAAYAAAD//xEAAQAHAAYAAAAAAAkAAQAHAAYAAAAAAAoAAQAHAAYAAAAAAAsAAQAHAAYAAAAAAAwAAQAHAAYAAAAAAA0AAQAHAAYAAAAAAA4AAQAHAAYAAAAAAA8AAQAHAAYAAAAAABAAAQAHAAYAAAAAABEAAQAHAAYAAAABAAkAAQAHAAYAAAABAAoAAQAHAAYAAAABAAsAAQAHAAYAAAABAAwAAQAHAAYAAAABAA0AAQAHAAYAAAABAA4AAQAHAAYAAAABAA8AAQAHAAYAAAABABAAAQAHAAYAAAABABEAAQAHAAYAAAACAAkAAQAHAAYAAAACAAoAAQAHAAYAAAACAAsAAQAHAAYAAAACAAwAAQAHAAYAAAACAA0AAQAHAAYAAAACAA4AAQAHAAYAAAACAA8AAQAHAAYAAAACABAAAQAHAAYAAAACABEAAQAHAAYAAAADAAkAAQAHAAYAAAADAAoAAQAHAAYAAAADAAsAAQAHAAYAAAADAAwAAQAHAAYAAAADAA0AAQAHAAYAAAADAA4AAQAHAAYAAAADAA8AAQAHAAYAAAADABAAAQAHAAYAAAADABEAAQAHAAYAAAAEAAkAAQAHAAYAAAAEAAoAAQAHAAYAAAAEAAsAAQAHAAYAAAAEAAwAAQAHAAYAAAAEAA0AAQAHAAYAAAAEAA4AAQAHAAYAAAAEAA8AAQAHAAYAAAAEABAAAQAHAAYAAAAEABEAAQAHAAYAAAAFAAkAAQAHAAYAAAAFAAoAAQAHAAYAAAAFAAsAAQAHAAYAAAAFAAwAAQAHAAYAAAAFAA0AAQAHAAYAAAAFAA4AAQAHAAYAAAAFAA8AAQAHAAYAAAAFABAAAQAHAAYAAAAFABEAAQAHAAYAAAAGAAkAAQAHAAYAAAAGAAoAAQAHAAYAAAAGAAsAAQAHAAYAAAAGAAwAAQAHAAYAAAAGAA0AAQAHAAYAAAAGAA4AAQAHAAYAAAAGAA8AAQAHAAYAAAAGABAAAQAHAAYAAAAGABEAAQAHAAYAAAAHAAkAAQAHAAYAAAAHAAoAAQAHAAYAAAAHAAsAAQAHAAYAAAAHAAwAAQAHAAYAAAAHAA0AAQAHAAYAAAAHAA4AAQAHAAYAAAAHAA8AAQAHAAYAAAAHABAAAQAHAAYAAAAHABEAAQAHAAYAAAAIAAkAAQAHAAYAAAAIAAoAAQAHAAYAAAAIAAsAAQAHAAYAAAAIAAwAAQAHAAYAAAAIAA0AAQAHAAYAAAAIAA4AAQAHAAYAAAAIAA8AAQAHAAYAAAAIABAAAQAHAAYAAAAIABEAAQAHAAYAAAAJAAkAAQAHAAYAAAAJAAoAAQAHAAYAAAAJAAsAAQAHAAYAAAAJAAwAAQAHAAYAAAAJAA0AAQAHAAYAAAAJAA4AAQAHAAYAAAAJAA8AAQAHAAYAAAAJABAAAQAHAAYAAAAJABEAAQAHAAYAAAAKAAkAAQAHAAYAAAAKAAoAAQAHAAYAAAAKAAsAAQAHAAYAAAAKAAwAAQAHAAYAAAAKAA0AAQAHAAYAAAAKAA4AAQAHAAYAAAAKAA8AAQAHAAYAAAAKABAAAQAHAAYAAAAKABEAAQAHAAYAAAALAAkAAQAHAAYAAAALAAoAAQAHAAYAAAALAAsAAQAHAAYAAAALAAwAAQAHAAYAAAALAA0AAQAHAAYAAAALAA4AAQAHAAYAAAALAA8AAQAHAAYAAAALABAAAQAHAAYAAAALABEAAQAHAAYAAAAMAAkAAQAHAAYAAAAMAAoAAQAHAAYAAAAMAAsAAQAHAAYAAAAMAAwAAQAHAAYAAAAMAA0AAQAHAAYAAAAMAA4AAQAHAAYAAAAMAA8AAQAHAAYAAAAMABAAAQAHAAYAAAAMABEAAQAHAAYAAAANAAkAAQAHAAYAAAANAAoAAQAHAAYAAAANAAsAAQAHAAYAAAANAAwAAQAHAAYAAAANAA0AAQAHAAYAAAANAA4AAQAHAAYAAAANAA8AAQAHAAYAAAANABAAAQAHAAYAAAANABEAAQAHAAYAAAAOAAkAAQAHAAYAAAAOAAoAAQAHAAYAAAAOAAsAAQAHAAYAAAAOAAwAAQAHAAYAAAAOAA0AAQAHAAYAAAAOAA4AAQAHAAYAAAAOAA8AAQAHAAYAAAAOABAAAQAHAAYAAAAOABEAAQAHAAYAAAAPAAkAAQAHAAYAAAAPAAoAAQAHAAYAAAAPAAsAAQAHAAYAAAAPAAwAAQAHAAYAAAAPAA0AAQAHAAYAAAAPAA4AAQAHAAYAAAAPAA8AAQAHAAYAAAAPABAAAQAHAAYAAAAPABEAAQAHAAYAAAAQAAkAAQAHAAYAAAAQAAoAAQAHAAYAAAAQAAsAAQAHAAYAAAAQAAwAAQAHAAYAAAAQAA0AAQAHAAYAAAAQAA4AAQAHAAYAAAAQAA8AAQAHAAYAAAAQABAAAQAHAAYAAAAQABEAAQAHAAYAAAARAAkAAQAHAAYAAAARAAoAAQAHAAYAAAARAAsAAQAHAAYAAAARAAwAAQAHAAYAAAARAA0AAQAHAAYAAAARAA4AAQAHAAYAAAARAA8AAQAHAAYAAAARABAAAQAHAAYAAAARABEAAQAHAAYAAAA=")
tile_set = SubResource("TileSet_80hj2")

[node name="GroundObjs" type="TileMapLayer" parent="TileMapLayers"]
z_index = -1
y_sort_enabled = true
use_parent_material = true
tile_set = SubResource("TileSet_80hj2")

[node name="Materials" type="Node2D" parent="."]
y_sort_enabled = true

[node name="flowerBlu" parent="Materials" instance=ExtResource("5_qmmpm")]
position = Vector2(96, 176)

[node name="flowerBlu3" parent="Materials" instance=ExtResource("5_qmmpm")]
position = Vector2(96, -96)

[node name="flowerBlu4" parent="Materials" instance=ExtResource("5_qmmpm")]
position = Vector2(56, -112)

[node name="flowerRed" parent="Materials" instance=ExtResource("6_bpc15")]
position = Vector2(160, 120)

[node name="flowerRed3" parent="Materials" instance=ExtResource("6_bpc15")]
position = Vector2(144, 160)

[node name="flowerRed2" parent="Materials" instance=ExtResource("6_bpc15")]
position = Vector2(192, 136)

[node name="flowerRed4" parent="Materials" instance=ExtResource("6_bpc15")]
position = Vector2(-264, 72)

[node name="flowerRed5" parent="Materials" instance=ExtResource("6_bpc15")]
position = Vector2(-232, -72)

[node name="flowerRed6" parent="Materials" instance=ExtResource("6_bpc15")]
position = Vector2(-264, -48)

[node name="flowerRed7" parent="Materials" instance=ExtResource("6_bpc15")]
position = Vector2(-280, -88)

[node name="flowerYel" parent="Materials" instance=ExtResource("7_u1d8c")]
position = Vector2(-216, 96)

[node name="flowerYel2" parent="Materials" instance=ExtResource("7_u1d8c")]
position = Vector2(208, 0)

[node name="flowerBlu2" parent="Materials" instance=ExtResource("5_qmmpm")]
position = Vector2(216, 80)

[node name="RockBlk" parent="Materials" instance=ExtResource("6_bf11r")]
position = Vector2(-104, 152)

[node name="RockBlk2" parent="Materials" instance=ExtResource("6_bf11r")]
position = Vector2(-152, 176)

[node name="RockWht" parent="Materials" instance=ExtResource("7_cfc3n")]
position = Vector2(-168, 144)

[node name="RockWht2" parent="Materials" instance=ExtResource("7_cfc3n")]
position = Vector2(-224, 176)

[node name="RockWht3" parent="Materials" instance=ExtResource("7_cfc3n")]
position = Vector2(-304, 120)

[node name="Interactables" type="Node2D" parent="."]
y_sort_enabled = true

[node name="PaintTable" parent="Interactables" instance=ExtResource("5_reohu")]
position = Vector2(152, 8)

[node name="PaintEasle" parent="Interactables" instance=ExtResource("9_ispa3")]
position = Vector2(-144, -32)
object = 9

[node name="Player" parent="." instance=ExtResource("2_t6ck0")]
unique_name_in_owner = true
position = Vector2(0, 64)

[node name="Camera2D" type="Camera2D" parent="Player"]
offset = Vector2(0, -60)

[node name="GUI Control" type="Control" parent="Player/Camera2D"]
z_index = 20
layout_mode = 3
anchors_preset = 0
offset_left = -576.0
offset_top = -376.0
offset_right = 576.0
offset_bottom = 256.0

[node name="InventoryGUI" parent="Player/Camera2D/GUI Control" instance=ExtResource("11_kb0px")]
unique_name_in_owner = true
layout_mode = 1

[node name="PaintTableGUI" parent="Player/Camera2D/GUI Control" instance=ExtResource("11_yywtb")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_top = 4.0
offset_bottom = 4.0

[node name="OptionsGUI" parent="Player/Camera2D/GUI Control" instance=ExtResource("12_8iqb8")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="PaintingGUI" parent="Player/Camera2D/GUI Control" instance=ExtResource("14_87ita")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Grayscale" type="ColorRect" parent="Player/Camera2D/GUI Control"]
unique_name_in_owner = true
visible = false
z_index = 200
material = SubResource("ShaderMaterial_3tpa7")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.45, 0.45, 0.45, 0)

[node name="PlayerLight" type="PointLight2D" parent="Player"]
unique_name_in_owner = true
visible = false
position = Vector2(0, -56)
scale = Vector2(0.628, 0.628)
color = Color(1, 0.776471, 0.709804, 1)
energy = 1.35
texture = ExtResource("12_sp8kp")

[node name="DayNight" type="CanvasModulate" parent="."]
unique_name_in_owner = true
visible = false
z_index = 2
color = Color(0.380392, 0.435294, 0.588235, 1)
